--- a/데이타플로우/Jupyter/0321. 탈모수다__Pain-Point.ipynb
+++ b/데이타플로우/Jupyter/0321. 탈모수다__Pain-Point.ipynb
@@ -8,22 +8,336 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "path = '../Data/Preprocessed/탈모톡톡_탈모수다.xlsx'\n",
+    "\n",
+    "df_origin = pd.read_excel(path)\n",
+    "df_origin['date'] = pd.to_datetime(df_origin['date'])\n",
+    "df_origin.loc[df_origin['rank'].isnull(), 'rank'] = 'any'\n",
+    "\n",
+    "column_list = ['Fuck탈모', '고민상담', '나의치료법', '일반잡담', '주제토론', '탈모제품']\n",
+    "\n",
+    "df_origin = df_origin[df_origin['category'].apply(lambda x : x in column_list)]\n",
+    "df_origin['keyword'] = df_origin['keyword'].apply(lambda x : eval(x))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_origin['keyword'] = df_origin['keyword'].apply(lambda x : eval(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'기록용으로 남겨요. F형 탈모를 진단 받았고요. 여기서는 속알\\n머리 탈모라고 지칭들 하시더라고요.\\n맨 위 두사진은 가르마를 탄게 아니고 자연스럽게 타지더라고요. 뚜껑이 없어져서 그런지...지금은 호전 되고 있고요.\\n미녹시딜은 한달 하고 때려치우고 약물 치료만 하고 있습니다.\\n요새 머리 스트레스를 덜 받으려고 노력해서인지 잔머리가 많이 올라오네요.\\n드디어 효과를 보는것같습니다.'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_origin[(df_origin['propTopic'] == 6) & (df_origin['keyword'].apply(lambda x : '미녹시딜' in x ))].sort_values(by = ['view'], ascending = False)['content'].iloc[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>propTopic</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">href</th>\n",
+       "      <th>Fuck탈모</th>\n",
+       "      <td>27.30</td>\n",
+       "      <td>9.61</td>\n",
+       "      <td>13.63</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>20.78</td>\n",
+       "      <td>7.86</td>\n",
+       "      <td>16.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>고민상담</th>\n",
+       "      <td>28.03</td>\n",
+       "      <td>11.10</td>\n",
+       "      <td>16.48</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>16.12</td>\n",
+       "      <td>7.61</td>\n",
+       "      <td>16.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>나의치료법</th>\n",
+       "      <td>43.21</td>\n",
+       "      <td>6.59</td>\n",
+       "      <td>19.06</td>\n",
+       "      <td>4.89</td>\n",
+       "      <td>19.06</td>\n",
+       "      <td>2.89</td>\n",
+       "      <td>4.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>일반잡담</th>\n",
+       "      <td>19.25</td>\n",
+       "      <td>11.14</td>\n",
+       "      <td>16.97</td>\n",
+       "      <td>3.42</td>\n",
+       "      <td>32.72</td>\n",
+       "      <td>8.42</td>\n",
+       "      <td>8.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>주제토론</th>\n",
+       "      <td>33.91</td>\n",
+       "      <td>6.12</td>\n",
+       "      <td>14.08</td>\n",
+       "      <td>4.82</td>\n",
+       "      <td>28.12</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>6.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>탈모제품</th>\n",
+       "      <td>28.25</td>\n",
+       "      <td>16.36</td>\n",
+       "      <td>2.64</td>\n",
+       "      <td>19.92</td>\n",
+       "      <td>27.95</td>\n",
+       "      <td>2.54</td>\n",
+       "      <td>2.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "propTopic          0      1      2      3      4     5      6\n",
+       "     category                                                \n",
+       "href Fuck탈모    27.30   9.61  13.63   4.20  20.78  7.86  16.62\n",
+       "     고민상담      28.03  11.10  16.48   4.06  16.12  7.61  16.60\n",
+       "     나의치료법     43.21   6.59  19.06   4.89  19.06  2.89   4.29\n",
+       "     일반잡담      19.25  11.14  16.97   3.42  32.72  8.42   8.07\n",
+       "     주제토론      33.91   6.12  14.08   4.82  28.12  6.50   6.46\n",
+       "     탈모제품      28.25  16.36   2.64  19.92  27.95  2.54   2.34"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 탈모수다: category 및 topic별 게시글 비율\n",
+    "df = df_origin.copy()\n",
+    "result = df.groupby(['category', 'propTopic'])['href'].count().reset_index()\n",
+    "result = result.pivot_table(index = ['propTopic'], columns = ['category'], values = ['href']).fillna(0)\n",
+    "for i in range(len(result.columns)):\n",
+    "    result.iloc[:, i] = round(result.iloc[:, i] / result.iloc[:, i].sum() * 100, 2)\n",
+    "result.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>propTopic</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">view</th>\n",
+       "      <th>Fuck탈모</th>\n",
+       "      <td>2094</td>\n",
+       "      <td>1240</td>\n",
+       "      <td>980</td>\n",
+       "      <td>1222</td>\n",
+       "      <td>1332</td>\n",
+       "      <td>1269</td>\n",
+       "      <td>2054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>고민상담</th>\n",
+       "      <td>1543</td>\n",
+       "      <td>1089</td>\n",
+       "      <td>853</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>1113</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>나의치료법</th>\n",
+       "      <td>4512</td>\n",
+       "      <td>2423</td>\n",
+       "      <td>1594</td>\n",
+       "      <td>3197</td>\n",
+       "      <td>2314</td>\n",
+       "      <td>2321</td>\n",
+       "      <td>3288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>일반잡담</th>\n",
+       "      <td>2092</td>\n",
+       "      <td>1433</td>\n",
+       "      <td>975</td>\n",
+       "      <td>1023</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>942</td>\n",
+       "      <td>1491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>주제토론</th>\n",
+       "      <td>2111</td>\n",
+       "      <td>1218</td>\n",
+       "      <td>803</td>\n",
+       "      <td>1043</td>\n",
+       "      <td>1509</td>\n",
+       "      <td>1019</td>\n",
+       "      <td>1173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>탈모제품</th>\n",
+       "      <td>1283</td>\n",
+       "      <td>983</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>770</td>\n",
+       "      <td>701</td>\n",
+       "      <td>604</td>\n",
+       "      <td>922</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "propTopic         0     1     2     3     4     5     6\n",
+       "     category                                          \n",
+       "view Fuck탈모    2094  1240   980  1222  1332  1269  2054\n",
+       "     고민상담      1543  1089   853  1015  1113  1235  1757\n",
+       "     나의치료법     4512  2423  1594  3197  2314  2321  3288\n",
+       "     일반잡담      2092  1433   975  1023  1015   942  1491\n",
+       "     주제토론      2111  1218   803  1043  1509  1019  1173\n",
+       "     탈모제품      1283   983  1022   770   701   604   922"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 탈모수다: category 및 topic별 평균 조회수\n",
+    "df = df_origin.copy()\n",
+    "result = df.groupby(['category', 'propTopic'])['view'].mean().reset_index()\n",
+    "result = result.pivot_table(index = ['propTopic'], columns = ['category'], values = ['view']).fillna(0)\n",
+    "result = result.apply(lambda x : round(x))\n",
+    "result = result.astype(int)\n",
+    "\n",
+    "result.T"
+   ]
   },
   {
    "cell_type": "code",
@@ -49,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
